# devicescript-pico

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: c-cpp.yml
boards/: regen.sh  rp2040.d.ts  rp2040archconfig.schema.json  rp2040deviceconfig-generated.schema.json  rp2040deviceconfig.schema.json
boards/base/: msr124.json  msr59.json
boards/cyw43/: pico_w.json
boards/rp2040/: arch.json  kittenbot_nanoscript.board.json  msr124.board.json  msr59.board.json  nanoscript.board.json  pico.board.json
boards/rp2040w/: arch.json  pico_w.board.json
scripts/: concat-configs.sh
src/: CMakeLists.txt  adc.c  cyw43_fixes.c  cyw43_fixes.h  dma.c  dmesg.c  dmesg.h  flash.c  hf2.c  hid.c  i2c.c  jd_user_config.h  jdpico.h  lwip_sock.c  lwipopts.h  main.c  pins.c  platform.c  spi.c  sws.pio  tim.c  tusb_config.h  uart.c  uart_log.c  usb.c  usb_descriptors.c  wifi_impl.c
